updated angular to 1.2.13 stable version from 1.1.5 unstable added sanitize

--- a/public/create/index.html
+++ b/public/create/index.html
@@ -3,8 +3,9 @@
 <head>
 	<title>Scripler</title>
 
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-sanitize.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-route.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-sanitize.js"></script>
 	<script type="text/javascript" src="scripts/app_controller.js"></script>
 	<script type="text/javascript" src="scripts/create_controller.js"></script>
 	<script type="text/javascript" src="scripts/project_controller.js"></script>
