--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -26,13 +26,13 @@
  				<p>+</p>
  			</div>
 
-			<div class="publication" ng-animate="'animate'" ng-repeat="publication in publications | orderBy:'order':reverse | filter:publicationSearch">
-				<a class="publication-options-show" data-gui="{{publication.id}}" ng-click="showPublicationOptions = true;">
+			<div class="publication" ng-animate="'animate'" ng-repeat="publication in publications track by $index | orderBy:'order':reverse | filter:publicationSearch">
+				<a class="publication-options-show" data-gui="{{publication._id}}" ng-click="showPublicationOptions = true;">
 					<div class="arrow"></div>
 				</a>
 				<!--<p ng-hide="editingPublicationTitle" ng-click="editingPublicationTitle = true;">-->
 				<p ng-hide="editingPublicationTitle">
-					<a href="#/project?pid={{publication.id}}">{{publication.name}}</a>
+					<a href="#/project?pid={{publication._id}}">{{publication.name}}</a>
 				</p>
 
 				<form ng-show="editingPublicationTitle">
@@ -50,7 +50,7 @@
 					<div class="publication-options-menupoint" ng-click="archivePublication(publication)">archive</div>
 					<div class="publication-options-dates" ng-show="publication.created && publication.changed">
 						<div>Created Date: </div><div class="dates">{{publication.created | date:'yyyy-MM-dd HH:mm'}}</div>
-						<div>Last Changed: </div><div class="dates">{{publication.changed | date:'yyyy-MM-dd HH:mm'}}</div>
+						<div>Last Changed: </div><div class="dates">{{publication.modified | date:'yyyy-MM-dd HH:mm'}}</div>
 					</div>
 				</div>
 			</div>
