--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -13,7 +13,7 @@
 				<div class="logo-box">
 					<img class="logo" src="../images/logo.png">
 				</div>
-				<div class="uni-bottom-box">
+				<div class="uni-bottom-box" ng-show="user._id">
 					<div class="user-box">
 						<img class="user-image" src="http://placekitten.com/50/50">
 						<div class="user-text">
@@ -36,6 +36,21 @@
 						</div>
 				</div>
 				<hr>
+				<div class="user-settings-options">
+					<div class="user-email" ng-show="!editPassword">
+						<input size="{{user.email.length}}" type="email" ng-model="user.email" ng-disabled="!editEmail" focus-on="editEmail">
+						<a ng-click="editEmail = !editEmail">Edit</a>
+					</div>
+					<div class="edit-password">
+						<a ng-click="editPassword = !editPassword" ng-show="!editPassword">Edit password</a>
+						<form name="editPasswordForm" ng-submit="changePassword()" ng-show="editPassword" novalidate>
+							<input type="password" id="current-password" name="currentPassword" ng-model="password" ng-class="{ 'has-error' : editPasswordForm.currentPassword.$invalid && passwordSubmitted }" placeholder="Current" ng-minlength="6" required>
+							<input type="password" id="new-password" name="newPassword" ng-model="newPassword" ng-class="{ 'has-error' : editPasswordForm.newPassword.$invalid && passwordSubmitted }" placeholder="New" ng-minlength="6" required>
+							<input type="password" id="new-retype-password" name="newPasswordRetype" ng-model="newPasswordRetype" ng-class="{ 'has-error' : editPasswordForm.newPasswordRetype.$invalid && passwordSubmitted }" placeholder="Retype New" ng-minlength="6" required>
+							<button type="submit" class="button">Save Changes</button>
+						</form>
+					</div>
+				</div>
 			</div>
 		</section>
 
