added checkboxes for newsletter and archived settings

--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -50,6 +50,12 @@
 							<button type="submit" class="button">Save Changes</button>
 						</form>
 					</div>
+					<div class="edit-newsletter">
+						<input type="checkbox" ng-model="user.newsletter">Receive newsletter
+					</div>
+					<div class="edit-archived">
+						<input type="checkbox" ng-model="user.showArchived">Show Archived
+					</div>
 				</div>
 			</div>
 		</section>
