--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -13,7 +13,7 @@
 						<div class="document new" ng-click="addDocument()">
 							<p>+</p>
 						</div>
-						<div class="document" ng-repeat="chapter in chapters" ng-click="chapterChoosen(chapter)"><p>{{chapter.title}}</p></div>
+						<div class="document" ng-repeat="chapter in chapters" ng-click="chapterChoosen(chapter)"><p>{{chapter.name}}</p></div>
 					</div>
 				</li>
 				<li class="menu-item-left closed">
