--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -68,7 +68,7 @@
 				<p>+</p>
 			</div>
 
-			<div class="publication" ng-animate="'animate'" ng-class="{ 'archived' : publication.archived }" ng-hide="publication.archived && !user.showArchived" ng-repeat="publication in publications track by $index | orderBy:'order':reverse | filter:publicationSearch">
+			<div class="publication" ng-animate="'animate'" ng-class="{ 'archived' : publication.archived }" ng-hide="publication.archived && !user.showArchived" ng-repeat="publication in publications track by $index">
 				<a class="publication-options-show" data-gui="{{publication._id}}" ng-click="showPublicationOptions = true">
 					<div class="arrow"></div>
 				</a>
