added tab positioning

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -4,6 +4,12 @@
 
 <div class="container">
 
+
+	<div id="menu-left-tabs" class="menu-left-tabs rotate">
+		<div id="menu-left-showhide" class="menu-left-tab">
+			<p ng-bind="project.name">Documents</p>
+		</div>
+	</div>
 	<div id="menu-left" class="menu-left">
 		<div class="content">
 			<ul>
@@ -31,11 +37,6 @@
 					</div>
 				</li>
 			</ul>
-		</div>
-		<div class="menu-left-tabs">
-			<div id="menu-left-showhide" class="menu-left-tab rotate">
-				<p ng-bind="project.name">Documents</p>
-			</div>
 		</div>
 	</div>
 
