--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -7,7 +7,7 @@
 
 	<div id="menu-left-tabs" class="menu-left-tabs rotate">
 		<div id="menu-left-showhide" class="menu-left-tab">
-			<p ng-bind="project.name">Documents</p>
+			<p ng-bind-html="project.name">Documents</p>
 		</div>
 	</div>
 	<div id="menu-left" class="menu-left">
