removed data-gui unused tag

--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -69,7 +69,7 @@
 			</div>
 
 			<div class="publication" ng-animate="'animate'" ng-class="{ 'archived' : publication.archived }" ng-hide="publication.archived && !user.showArchived" ng-repeat="publication in publications track by $index">
-				<a class="publication-options-show" data-gui="{{publication._id}}" ng-click="showPublicationOptions = true">
+				<a class="publication-options-show" ng-click="showPublicationOptions = true">
 					<div class="arrow"></div>
 				</a>
 				<!--<p ng-hide="editingPublicationTitle" ng-click="editingPublicationTitle = true;">-->
