fixed textarea height

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -34,7 +34,7 @@
 
 						<form ng-show="editingProjectDocumentTitle">
 							<p>
-								<textarea id="renameProjectDocument" ng-model="projectDocument.name" focus-on="!!editingProjectDocumentTitle" on-enter="editingProjectDocumentTitle = false; renameProjectDocument(projectDocument);"></textarea>
+								<textarea id="renameProjectDocument" rows="4" ng-model="projectDocument.name" focus-on="!!editingProjectDocumentTitle" on-enter="editingProjectDocumentTitle = false; renameProjectDocument(projectDocument);"></textarea>
 							</p>
 						</form>
 
