--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -11,7 +11,7 @@
 					</a>
 				</div>
 				<div class="logo-box">
-					<img class="logo" src="../images/logo.png">
+					<img class="logo" src="/images/logo.png">
 				</div>
 				<div class="uni-bottom-box" ng-show="user._id">
 					<div class="user-box">
